# redunisol-platform

./: .gitignore  AGENTS.md  README.md
.github/: CODEOWNERS
.github/workflows/: deploy-dev.yml  deploy-herramientas-dev.yml  deploy-herramientas-prod.yml  deploy-infra.yml  deploy-metamap-server-dev.yml  deploy-prod.yml  deploy-redunisol-web-dev.yml  deploy-redunisol-web-prod.yml  publish-analisis-credito-arca-padron-a13-image.yml  validate-metamap-server.yml  validate.yml
apps/metamap-platform/client/transferencias-celesol/: .gitignore  Cargo.toml  README.md  build-package.ps1  transferencias.env.example
apps/metamap-platform/client/transferencias-celesol/src/: app.rs  coinag_client.rs  completed_log.rs  config.rs  core_client.rs  lib.rs  logging.rs  main.rs  metamap_client.rs  models.rs  receipt.rs  server_client.rs  ssh_transport.rs  validation.rs
apps/metamap-platform/server/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
apps/metamap-platform/server/deploy/: docker-compose.vps.yml  metamap-platform-server.dev.env.enc  metamap-platform-server.dev.env.example  metamap-platform-server.prod.env.enc  metamap-platform-server.prod.env.example
apps/metamap-platform/server/src/metamap_server/: __init__.py  api.py  config.py  db.py  metamap_resource.py  security.py  store_sql.py  workflow.py
apps/metamap-platform/server/tests/: test_app.py  test_config.py  test_metamap_resource.py
automations/marketing-crm/: README.md
docs/: README.md  architecture.md  ci-cd.md  kestra-configuration.md  metamap-client-server-redesign-plan.md  migration-notes.md  redunisol-web-deploy-runbook.md  redunisol-web-operating-model.md  redunisol-web-overview.md
kestra/tools/: audit_bitrix_leads.py  deploy_kestra.py  manage_encrypted_env.py  requirements.txt  validate_kestra.py
platform/infra/: .env.example  docker-compose.yml  kestra-runtime.env.enc
tools/: deploy_kestra.py  manage_encrypted_env.py
web/herramientas/: .env.example  README.md
web/redunisol-web/: .env.example  .gitignore  README.md  (+6 more)
(+228 files in other folders)
