[package]
name = "transferencias-celesol"
version = "1.0.2"
edition = "2024"

[dependencies]
aes-gcm = { version = "0.10.3", features = ["std"] }
anyhow = "1.0.98"
base64 = "0.22.1"
bytes = "1.10.1"
chrono = { version = "0.4.42", features = ["clock"] }
eframe = "0.33.0"
egui = "0.33.0"
egui_extras = "0.33.0"
env_logger = "0.11.8"
http = "1.3.1"
http-body-util = "0.1.3"
hyper = { version = "1.7.0", features = ["client", "http1"] }
hyper-util = { version = "0.1.20", features = ["client", "http1", "tokio"] }
log = "0.4.28"
pbkdf2 = "0.12.2"
printpdf = { version = "0.7.0", features = ["embedded_images"] }
rand = "0.8.5"
reqwest = { version = "0.12.23", default-features = false, features = ["blocking", "json", "rustls-tls"] }
russh = { version = "0.60.0", default-features = false, features = ["ring"] }
rust_decimal = { version = "1.39.0", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_urlencoded = "0.7.1"
sha2 = "0.10.9"
tokio = { version = "1.47.1", features = ["io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-rustls = { version = "0.26.4", default-features = false, features = ["logging", "ring", "tls12"] }
url = "2.5.7"
webpki-roots = "1.0.2"
